@@ -12,8 +12,9 @@ ufw (0.24) UNRELEASED; urgency=low
   * before6.rules: restrict multicast (LP: #304216). Thanks to Ryan Giobbi
   * before.rules: don't use ctstate as it is not supported on all kernels and
     we don't use the extra information anyway (LP: #289906)
+  * fix translations for input strings (LP: #302426)
 
- -- Jamie Strandboge <jamie@ubuntu.com>  Mon, 29 Sep 2008 13:43:11 -0500
+ -- Jamie Strandboge <jamie@ubuntu.com>  Fri, 12 Dec 2008 13:43:11 -0500
 
 ufw (0.23) intrepid; urgency=low
 
